# golem

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
flittle/: README.md  pubspec.yaml
flittle/android/app/: build.gradle
flittle/android/app/src/debug/: AndroidManifest.xml
flittle/android/app/src/main/: AndroidManifest.xml
flittle/android/app/src/main/kotlin/com/example/flittle/: MainActivity.kt
flittle/ios/Runner/: Info.plist
flittle/ios/Runner.xcodeproj/: project.pbxproj
flittle/lib/: main.dart
flittle/linux/: CMakeLists.txt  my_application.cc
flittle/macos/Runner.xcodeproj/: project.pbxproj
flittle/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flittle/macos/Runner/Configs/: AppInfo.xcconfig
flittle/test/: widget_test.dart
flittle/web/: index.html  manifest.json
flittle/windows/: CMakeLists.txt
flittle/windows/runner/: Runner.rc  main.cpp
gabite/: .gitignore  Cargo.toml  config.example.json  rustfmt.toml
gabite/src/: main.rs
munna/: package-lock.json  package.json
munna/src/: App.tsx  index.tsx
shared/system_info/: Cargo.toml
shared/system_info/src/: lib.rs
zekrom/: Cargo.toml
zekrom/src/: main.rs
